# OPENGL_ENGINE

./: CMakeLists.txt  README.md
include/Headers/: Camera.hpp  ObjLoader.hpp  Obj_loader.h  Renderer.h  Renderer.hpp  Shaders.h  Shaders.hpp  UserInput.hpp  Window.h  Window.hpp
src/: glad.c  main.cpp
src/Assets/: vertex_core.glsl
src/Graphics/ObjLoader/: ObjLoader.cpp
src/Graphics/Obj_loader/: Obj_loader.cpp
src/Graphics/Renderer/: Renderer.cpp
src/Graphics/Shaders/: Shaders.cpp
src/UI/Camera/: Camera.cpp
src/UI/UserInput/: UserInput.cpp
src/UI/window/: Window.cpp
src/window/: Window.cpp  Window.h
sun_example/: sun.cpp
temp_asset_folder/: fragment_core.glsl
temp_asset_folder/data/weights/: 0.weights  1.weights  10.weights  11.weights  2.weights  3.weights  4.weights  5.weights  6.weights  7.weights  8.weights  9.weights
